Code tidy and removal